[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epicsdev_rohde"
version = "1.0.0"
authors = [
  { name="Andrey Sukhanov", email="sukhanov@bnl.gov" },
]
description = "EPICS PVAccess server for Rohde&Schwarz oscilloscopes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "p4p", "epicsdev", "pyvisa", "pyvisa-py", "numpy"
]

[project.urls]
"Homepage" = "https://github.com/ASukhanov/epicsdev_rohde"
"Bug Tracker" = "https://github.com/ASukhanov/epicsdev_rohde"
